--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@
   /* emerald-500 */
   --title-text-color: rgb(6 78 59);
   /* emerald-900 */
-  --section-bg-color: rgb(243 244 246);
-  /* gray-100 */
+  --section-bg-color: rgb(229 231 235);
+  /* gray-200 */
   --item-fechacompra-text-color: rgb(156 163 175);
   /* gray-400 */
   --item-bg-color: rgb(255 255 255);
@@ -48,8 +48,8 @@
   /* emerald-900/50 */
   --item-counter-bg-color: rgb(229 231 235);
   /* gray-200 */
-  --tag-bg-color: rgb(255 255 255);
-  /* white */
+  --tag-bg-color: rgb(229 231 235);
+  /* gray-200 */
   --tag-hover-bg-color: rgb(209 213 219);
   /* gray-300 */
   --tag-selected-bg-color: rgb(5 150 105);
@@ -58,6 +58,8 @@
   /* white */
   --tag-selected-hover-bg-color: rgb(6 95 70);
   /* emerald-800 */
+  --modal-title-text-color: rgb(6 78 59);
+  /* emerald-900 */
   --modal-backdrop-color: rgb(2 44 34 / 0.8);
   /* emerald-900/80 */
   --modal-bg-color: rgb(243 244 246);
@@ -286,7 +288,7 @@ body {
     @apply w-9 h-9 bg-none text-[var(--selector-tienda-bg-color)] text-xs m-2 border border-[var(--border-color)] rounded-md transition-all duration-200 shadow-md;
   }
   .seccionBotones {
-    @apply flex justify-between items-center absolute bottom-0 w-full min-h-10;
+    @apply flex justify-between items-center fixed bottom-4 right-4 w-32 min-h-10 z-0;
   }
   .scrollableTextarea {
     @apply resize-none overflow-auto max-h-16 md:max-h-32 overflow-y-auto;
@@ -341,52 +343,58 @@ body {
   /* ********************* */
 
   .modal {
-    @apply backdrop:bg-[var(--modal-backdrop-color)] bg-[var(--modal-bg-color)] text-[var(--text-color)] fixed z-[1000] p-10 rounded-md shadow-md;
+    @apply backdrop:bg-[var(--modal-backdrop-color)] bg-[var(--modal-bg-color)] text-[var(--text-color)] fixed z-[1000] p-10 rounded-md shadow-md w-[90%] max-w-2xl transition-all duration-200;
   }
   .modalTitulo {
     @apply md:text-2xl text-xl font-bold mb-4 text-[var(--modal-title-text-color)];
   }
   .modalSubtitulo {
-    @apply text-lg md:text-xl font-bold mb-3 text-[var(--modal-title-text-color)];
+    @apply text-lg md:text-xl font-bold md:mb-3 mb-1 text-[var(--modal-title-text-color)];
   }
   .modalSubSubtitulo {
-    @apply md:text-base text-sm font-bold mb-3 text-[var(--modal-title-text-color)];
+    @apply md:text-base text-sm font-bold text-[var(--modal-title-text-color)];
   }
   .modalSection {
-    @apply mb-2;
+    @apply mb-2 flex flex-col justify-between items-center;
   }
   .modalSeparator {
-    @apply mb-1 flex flex-col justify-between items-center;
+    @apply mb-1 flex flex-col justify-between items-center w-full;
+  }
+  .modalParallelInputs {
+    @apply flex flex-row justify-between items-center w-[80%];
   }
   .modalDivider {
     @apply border-b-0 border-[var(--task-divider-color)] md:my-4 my-2;
   }
   .modalInput {
-    @apply w-60 md:w-96 p-2 mb-2 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-10 max-h-9;
+    @apply w-[90%] p-2 mb-2 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-12 max-h-8;
   }
   .modalInputSmall {
-    @apply w-28 md:w-40 p-2 me-2 mb-3 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-10 max-h-9;
+    @apply w-28 md:w-40 p-2 me-2 md:mb-3 mb-1 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-12 max-h-8;
   }
   .modalTextArea {
     @apply text-xs md:max-h-none;
   }
   .modalSelect {
-    @apply w-60 md:w-96 p-2 mb-3 text-sm border border-[var(--border-color)] rounded-md text-[var(--text-color)] transition-all duration-200;
+    @apply w-[90%] p-2 mb-3 text-sm border border-[var(--border-color)] rounded-md text-[var(--text-color)] transition-all duration-200;
   }
   .modalLabel {
     @apply text-sm font-bold mb-2;
   }
   .modalBoton {
-    @apply bg-[var(--modal-button-bg-color)] text-[var(--modal-button-text-color)] py-2 px-4 rounded-md transition-all duration-200 hover:bg-[var(--modal-button-hover-bg-color)] cursor-pointer text-base;
+    @apply bg-[var(--modal-button-bg-color)] text-[var(--modal-button-text-color)] p-2 md:px-4 md:mb-3 mb-1 rounded-md transition-all duration-200 hover:bg-[var(--modal-button-hover-bg-color)] cursor-pointer md:text-base text-xs;
   }
   .modalLabel {
     @apply text-sm font-bold mb-2 me-3;
   }
   .modalLista {
-    @apply w-60 md:w-96 p-2 my-3 bg-[var(--modal-input-bg-color)] text-xs border rounded-md text-[var(--modal-input-text-color)] transition-all duration-200;
+    @apply w-[90%] p-2 my-3 bg-[var(--modal-input-bg-color)] text-xs border rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-32 max-h-16;
   }
   .modalListaItem {
-    @apply flex justify-between items-center;
+    @apply flex justify-between items-center hover:bg-[var(--item-hover-bg-color)] rounded-md md:p-1 border border-transparent transition-all duration-200;
+  }
+  .modalListaItemButtons {
+    @apply flex justify-between items-center gap-2;
   }
   .modalCerrar {
     @apply absolute w-7 h-6 top-4 right-4 text-[var(--text-color)] cursor-pointer text-2xl;
@@ -401,7 +409,7 @@ body {
   .barraLateral {
     @apply bg-[var(--barra-bg-color)] fixed top-0 left-0
     md:w-1/4 xl:w-80 h-screen shadow-[rgba(30,58,138,0.5)_3px_0px_3px_0px]
-    transition-all duration-200;
+    transition-all duration-200 z-50;
   }
   .tituloBarraLateral {
     @apply flex justify-center text-[var(--barra-text-color)] text-3xl font-bold p-4 my-6 mt-2 md:mt-6 cursor-pointer;
@@ -601,9 +609,24 @@ body {
     @apply transform rotate-180 transition-all duration-200;
   }
   .despensa,
-  .listaCompra,
-  .productsTable {
-    @apply h-[84%] max-h-[84%] overflow-auto sm:scrollbar-hide relative;
+  .listaCompra {
+    @apply h-[88%] max-h-[88%] overflow-auto relative;
+  }
+  .despensa::-webkit-scrollbar,
+  .listaCompra::-webkit-scrollbar {
+    @apply w-1 h-2;
+  }
+  .despensa::-webkit-scrollbar-thumb,
+  .listaCompra::-webkit-scrollbar-thumb {
+    @apply bg-[var(--scrollbar-thumb-color)] rounded-full;
+  }
+  .despensa::-webkit-scrollbar-thumb:hover,
+  .listaCompra::-webkit-scrollbar-thumb:hover {
+    @apply bg-[var(--scrollbar-thumb-hover-color)] rounded-full;
+  }
+  .despensa::-webkit-scrollbar-track,
+  .listaCompra::-webkit-scrollbar-track {
+    @apply bg-[var(--scrollbar-track-color)] rounded-full;
   }
   .iconoScrollBottom,
   .iconoScrollTop {
@@ -616,29 +639,14 @@ body {
     @apply bottom-0;
   }
   .productsTable {
-    @apply h-[95%] max-h-[95%] ;
-  }
-  .productsTable::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
-  .productsTable::-webkit-scrollbar-track {
-    background-color: var(--scrollbar-track-color);
-    border-radius: 4px;
-  }
-  .productsTable::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb-color);
-    border-radius: 4px;
-  }
-  .productsTable::-webkit-scrollbar-thumb:hover {
-    background-color: var(--scrollbar-thumb-hover-color);
+    @apply h-[84%] max-h-[84%];
   }
 
   /* ********************* */
   /* ETIQUETAS */
   /* ********************* */
   .etiquetas {
-    @apply flex flex-wrap gap-2 mb-2 z-50 mt-2 max-h-[3.8rem] overflow-auto sm:scrollbar-hide bg-[var(--section-bg-color)]
+    @apply flex flex-wrap gap-2 my-2 py-2 z-50 overflow-auto sm:scrollbar-hide bg-[var(--section-bg-color)]
     bg-opacity-100 top-16 md:top-[4.2rem] items-center transition-all duration-200;
   }
   .etiqueta {
@@ -664,7 +672,19 @@ body {
     @apply mb-1 hover:bg-[var(--item-hover-bg-color)] shadow-md rounded-md p-1 border border-transparent transition-all duration-200;
   }
   .recetas {
-    @apply h-[94%] max-h-[94%] relative pt-4 rounded-md;
+    @apply rounded-md h-[88%] max-h-[88%] overflow-y-auto relative;
+  }
+  .recetas::-webkit-scrollbar {
+    @apply w-1 h-2;
+  }
+  .recetas::-webkit-scrollbar-thumb {
+    @apply bg-[var(--scrollbar-thumb-color)] rounded-full;
+  }
+  .recetas::-webkit-scrollbar-thumb:hover {
+    @apply bg-[var(--scrollbar-thumb-hover-color)] rounded-full;
+  }
+  .recetas::-webkit-scrollbar-track {
+    @apply bg-[var(--scrollbar-track-color)] rounded-full;
   }
   .receta {
     @apply justify-between bg-[var(--item-bg-color)] shadow-md rounded-md p-2 border border-transparent transition-all duration-200;
@@ -673,22 +693,22 @@ body {
     @apply border-b-2 border-[var(--border-color)];
   }
   .recetaName {
-    @apply text-[var(--recipe-title-color)]  text-xl font-bold;
+    @apply text-[var(--recipe-title-color)] text-xl font-bold;
   }
   .recetaDesc {
-    @apply text-[var(--item-fechacompra-text-color)] text-sm cursor-default mb-1;
+    @apply text-[var(--item-fechacompra-text-color)] cursor-default mb-1 text-xs md:text-base;
   }
   .tagPill {
-    @apply me-2 my-2 p-0 text-xs;
+    @apply md:me-2 md:my-2 me-1 my-1 p-0 text-xs;
   }
   .tagPill:hover {
     @apply bg-[var(--tag-hover-bg-color)] shadow-md transition-all duration-200 cursor-default;
   }
   .tituloSeccionReceta {
-    @apply text-[var(--recipe-section-title-color)] text-lg font-bold mb-5 cursor-default;
+    @apply text-[var(--recipe-section-title-color)] font-bold mb-5 cursor-default text-base md:text-lg;
   }
   .contenidoSeccionReceta {
-    @apply text-[var(--recipe-section-content-color)] text-sm p-2 cursor-default;
+    @apply text-[var(--recipe-section-content-color)] p-2 cursor-default text-xs md:text-base;
   }
 }
 
