--- a/src/styles/css/barraLateral.css
+++ b/src/styles/css/barraLateral.css
@@ -38,10 +38,9 @@
   font-size: 1.875rem;
   font-weight: bold;
   padding: 1rem;
-  margin: 1.5rem 0 0.5rem;
+  margin: 0.5rem 0 0.5rem;
   cursor: pointer;
 }
-
 @media (min-width: 768px) {
   .tituloBarraLateral {
     margin-top: 1.5rem;
@@ -91,14 +90,15 @@
   align-items: center;
   color: var(--barra-text-color);
   padding: 0.5rem;
-  margin: 0.5rem;
   border-radius: 0.375rem;
   transition: all 0.2s;
   cursor: pointer;
+  margin: 0.25rem;
 }
 
 @media (min-width: 768px) {
   .itemBarraLateral {
+    margin: 0.5rem;
     justify-content: flex-start;
   }
 }
@@ -134,8 +134,14 @@
 .barraLateralSeparador {
   width: 90%;
   margin: auto;
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+@media (min-width: 768px) {
+  .barraLateralSeparador {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .toggleMode {
@@ -143,13 +149,18 @@
   bottom: 0;
   left: 0;
   padding: 0.5rem;
-  margin: 0.5rem 0;
+  margin: 0;
   color: var(--barra-text-color);
   font-size: 0.75rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 0.75rem;
+}
+@media (min-width: 768px) {
+  .toggleMode {
+    margin: 0.5rem 0;
+  }
 }
 
 .toggleModeLight,
