--- a/src/styles/css/productos.css
+++ b/src/styles/css/productos.css
@@ -11,7 +11,6 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 0.375rem;
   font-size: 0.75rem;
-  /* text-xs */
   line-height: 1rem;
   padding: 0.5rem;
   margin-bottom: 0.25rem;
@@ -172,14 +171,19 @@
 
 .despensa,
 .listaCompra {
-  height: 84%;
-  max-height: 84%;
+  height: 80%;
+  max-height: 80%;
   overflow: auto;
   position: relative;
 }
-
-@media (min-width: 768px) {
-
+@media (max-height: 700px) {
+  .despensa,
+  .listaCompra {
+    height: 70%;
+    max-height: 70%;
+  }
+}
+@media (min-width: 768px) and (min-height: 700px) {
   .despensa,
   .listaCompra {
     height: 90%;
@@ -231,11 +235,18 @@
 }
 
 .productsTable {
-  height: 79%;
-  max-height: 79%;
+  height: 80%;
+  max-height: 80%;
+  overflow: auto;
+  position: relative;
 }
-
-@media (min-width: 768px) {
+@media (max-height: 700px) {
+  .productsTable {
+    height: 70%;
+    max-height: 70%;
+  }
+}
+@media (min-width: 768px) and (min-height: 700px) {
   .productsTable {
     height: 90%;
     max-height: 90%;
