--- a/src/styles/css/recetas.css
+++ b/src/styles/css/recetas.css
@@ -18,10 +18,22 @@
 
 .recetas {
   border-radius: 0.375rem;
-  height: 88%;
-  max-height: 88%;
+  height: 80%;
+  max-height: 80%;
   overflow-y: auto;
   position: relative;
+}
+@media (max-height: 700px) {
+  .recetas {
+    height: 70%;
+    max-height: 70%;
+  }
+}
+@media (min-width: 768px) and (min-height: 700px) {
+  .recetas {
+    height: 90%;
+    max-height: 90%;
+  }
 }
 
 .recetas::-webkit-scrollbar {
