--- a/src/styles/css/tareas.css
+++ b/src/styles/css/tareas.css
@@ -55,7 +55,12 @@
 .hrSeccion {
   border-bottom: 0;
   border-color: var(--task-divider-color);
-  margin: 0.75rem 0;
+  margin: 0.5rem 0;
+}
+@media (min-width: 768px) {
+  .hrSeccion {
+    margin: 1rem 0;
+  }
 }
 
 .tareas {
