--- a/src/styles/css/fichajes.css
+++ b/src/styles/css/fichajes.css
@@ -16,7 +16,13 @@
 @media (min-width: 768px) {
   .shiftButtons {
     padding: 1.25rem;
-    gap: 3rem;
+    gap: 2rem;
+  }
+}
+@media (max-height: 950px) {
+  .shiftButtons {
+    padding: 0.5rem;
+    gap: 0;
   }
 }
 
@@ -134,6 +140,7 @@ input[type='month'] {
   margin-inline: 0.5rem;
   cursor: default;
 }
+
 .shiftList::-webkit-scrollbar {
   width: 0.25rem;
   height: 0.5rem;
@@ -152,23 +159,24 @@ input[type='month'] {
   background-color: var(--scrollbar-track-color);
   border-radius: 9999px;
 }
-@media (min-width: 768px) {
-  .shiftList {
-    margin-inline: 1rem;
-    height: 90%;
-    max-height: 90%;
-  }
-}
+
 @media (max-height: 700px) {
   .shiftList {
     height: 60%;
     max-height: 60%;
   }
 }
+@media (min-height: 700px) {
+  .shiftList {
+    margin-inline: 1rem;
+    height: 75%;
+    max-height: 75%;
+  }
+}
 @media (min-width: 768px) and (min-height: 700px) {
   .shiftList {
-    height: 90%;
-    max-height: 90%;
+    height: 70%;
+    max-height: 70%;
   }
 }
 
