--- a/src/styles/css/mainContent.css
+++ b/src/styles/css/mainContent.css
@@ -87,14 +87,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 100%;
+  max-height: 100%;
 }
 
 .portadaLogo {
   width: 16rem;
   height: 16rem;
   margin-bottom: 1rem;
-  animation: bounce 1s infinite;
+  /* animation: bounce 1s infinite; */
   image-rendering: pixelated;
 }
 
@@ -128,6 +130,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
