--- a/src/styles/css/tareas.css
+++ b/src/styles/css/tareas.css
@@ -145,14 +145,44 @@
 }
 
 .houseTaskList {
-  height: 70%;
-  max-height: 70%;
+  height: 60%;
+  max-height: 60%;
   overflow: auto;
   margin-inline: 0.5rem;
   cursor: default;
 }
+
+@media (min-height: 700px) and (min-width: 0px) {
+  .houseTaskList {
+    height: 75%;
+    max-height: 75%;
+  }
+}
+
+@media (min-width: 768px) {
+  .houseTaskList {
+    height: 80%;
+    max-height: 80%;
+  }
+}
+
 .houseTaskList::-webkit-scrollbar {
-  display: none;
+  width: 0.25rem;
+  height: 0.5rem;
+}
+
+.houseTaskList::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb-color);
+  border-radius: 9999px;
+}
+
+.houseTaskList::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-thumb-hover-color);
+}
+
+.houseTaskList::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track-color);
+  border-radius: 9999px;
 }
 
 .houseTaskTitle {
@@ -223,6 +253,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
