--- a/src/styles/css/sidebar.css
+++ b/src/styles/css/sidebar.css
@@ -94,6 +94,7 @@
   transition: all 0.2s;
   cursor: pointer;
   margin: 0.25rem;
+  transition: all 0.2s;
 }
 
 @media (min-width: 768px) {
@@ -106,6 +107,10 @@
 .itemBarraLateral:hover {
   background-color: var(--barra-item-hover-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
+}
+
+.itemBarraLateral:hover .notificationBubble {
   transform: scale(1.05);
 }
 
@@ -261,4 +266,22 @@
   .authButtonCompact {
     position: static;
   }
+}
+
+.notificationBubble {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background-color: red;
+  color: white;
+  font-size: 0.5rem;
+  font-weight: bold;
+  width: 0.875rem;
+  height: 0.875rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 9999px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s;
 }
