--- a/src/styles/css/sidebar.css
+++ b/src/styles/css/sidebar.css
@@ -174,58 +174,48 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.75rem 0.5rem;
   margin: 0;
   color: var(--barra-text-color);
   font-size: 0.75rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   gap: 0.75rem;
 }
-
 @media (min-width: 768px) {
   .toggleMode {
     margin: 0.5rem 0;
+    gap: 1rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 }
-
 .toggleModeLight,
 .toggleModeDark {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.75rem;
+  height: 1.75rem;
   margin: 0.5rem;
   border-radius: 0.375rem;
   transition: all 0.2s;
   cursor: pointer;
 }
-
 .toggleModeLight:hover,
 .toggleModeDark:hover {
   color: var(--barra-item-hover-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
 .toggleModeLight.animate,
 .toggleModeDark.animate {
   animation: spinFade 0.3s ease-in-out;
 }
-
-.authButtonContainer {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
-  margin: 0.5rem 0;
-  transition: all 0.2s;
-  border-left: 2px solid var(--barra-auth-item-border-color);
-  padding-left: 1.25rem;
-}
-
 .authPill,
-.authButtonCompact {
-  width: 2rem;
-  height: 2rem;
+.authButtonCompact,
+.microphoneButton {
+  width: 2.25rem;
+  height: 2.25rem;
   border-radius: 9999px;
   background-color: var(--barra-auth-item-bg-color);
   color: var(--barra-auth-item-text-color);
@@ -236,35 +226,21 @@
   text-transform: uppercase;
   transition: all 0.2s;
 }
-
 .authPill:hover,
 .authButtonCompact:hover {
   background-color: var(--barra-auth-item-hover-bg-color);
 }
-
-.authButton {
-  background-color: var(--barra-auth-item-bg-color);
-  color: var(--barra-auth-item-text-color);
-  padding: 0.5rem 1rem;
-  border-radius: 0.375rem;
-  transition: all 0.2s;
-  cursor: pointer;
-}
-
-.authButton:hover {
-  background-color: var(--barra-auth-item-hover-bg-color);
-}
-
-.authButtonCompact {
-  position: absolute;
-  bottom: 3.5rem;
-  left: 0.75rem;
-}
-
 @media (min-width: 768px) {
-  .authButtonCompact {
-    position: static;
+  .authButtonCompact,
+  .microphoneButton,
+  .microphoneButton {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin: 0 0.25rem;
   }
+}
+.microphoneButton:hover {
+  background-color: var(--barra-auth-item-hover-bg-color);
 }
 
 .notificationBubble {
